src/objects/Recruiting_Organization__c.object
<CustomObject>
    <fields>
        <fullName>Recruiting_Organization_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruiting Organization Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiting_Territory_Owner__c</fullName>
        <label>Recruiting Territory Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State the Organization resides</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Recruiting Organization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recruiting Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiting Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>